--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secondary-rainbow-simulation-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simulation of secondary rainbow phenomenon created in HTML, CSS and JavaScript.",
   "main": "lib/index.js",
   "scripts": {
@@ -34,5 +34,8 @@
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
-  ]
+  ],
+  "blah": {
+    "title": "Secondary Rainbow"
+  }
 }
